# flask_project

./: Dockerfile  app.py  docker-compose.yml  pyproject.toml
templates/: about.html  base.html  create-article.html  index.html  post.html  post_update.html  posts.html
