[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["art.nikolaev <starist2000@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
blinker = "1.7.0"
click = "8.1.7"
flask = "3.0.2"
flask-sqlalchemy = "3.1.1"
importlib-metadata = "7.1.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
markupsafe = "2.1.5"
sqlalchemy = "2.0.29"
typing-extensions = "4.10.0"
werkzeug = "3.0.1"
zipp = "3.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
